build/log.txt
Scanning dependencies of target ORB_SLAM2
[  4%] Building CXX object CMakeFiles/ORB_SLAM2.dir/src/Tracking.cc.o
/home/sicong/VIORB/ORB_SLAM2/src/Tracking.cc: In member function ‘void ORB_SLAM2::Tracking::RecomputeIMUBiasAndCurrentNavstate(ORB_SLAM2::NavState&)’:
/home/sicong/VIORB/ORB_SLAM2/src/Tracking.cc:98:22: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for(int i=0; i<N-2; i++)
                      ^
/home/sicong/VIORB/ORB_SLAM2/src/Tracking.cc: In member function ‘void ORB_SLAM2::Tracking::saveDebugStates()’:
/home/sicong/VIORB/ORB_SLAM2/src/Tracking.cc:2294:9: error: expected ‘,’ or ‘;’ before ‘f’
         f << setprecision(6) << mCurrentFrame.mTimeStamp << setprecision(7) << " ";
         ^
make[2]: *** [CMakeFiles/ORB_SLAM2.dir/src/Tracking.cc.o] Error 1
make[1]: *** [CMakeFiles/ORB_SLAM2.dir/all] Error 2
make: *** [all] Error 2
